--- a/views/list_product.ejs
+++ b/views/list_product.ejs
@@ -3,9 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lita de Produtos</title>
+     <!-- CHAMANDO BOOTSTRAP -->
+     <link rel="stylesheet" href="/css/bootstrap.min.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Lista de produtos</h1>
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>nome</th>
+                    <th>Quantidade</th>
+                    <th>Valor</th>
+                    <th>Ações</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <% prod.forEach (product => { %>
+                    <tr>
+                        <td><%= product.nome %></td>
+                        <td><%= product.quantity %></td>
+                        <td><%= product.price %></td>
+                        <td>
+                            <button class="btn btn-warning btn-sm">Editar</button>
+                            <button class="btn btn-danger btn-sm">Excluir</button>
+                        </td>
+                    </tr>
+                    <% }) %>
+            </tbody>
+        </table>
+
+    </div>
 </body>
 </html>
