--- a/views/add_product.ejs
+++ b/views/add_product.ejs
@@ -31,7 +31,7 @@
             <div class="form-group">
                 <label for="price">Preço</label>
 
-                <input class="form-control" type="number" id="price" name="price" placeholder="R$ 00,00" required>
+                <input class="form-control" type="text" id="price" name="price" placeholder="R$ 00,00" required>
             </div>
             <!-- Botão de envio -->
             <button class="btn btn-primary">Adicionar</button>
